[project]
name = "ComfyUI-FL-Qwen3TTS"
description = "Qwen3 TTS for ComfyUI - High-quality text-to-speech with voice cloning, voice design, and custom voices"
version = "1.0.1"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.57.0",
    "accelerate>=1.0.0",
    "huggingface_hub",
    "librosa",
    "soundfile",
    "einops",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI-FL-Qwen3TTS"

[tool.comfy]
PublisherId = "filliptm"
DisplayName = "ComfyUI-FL-Qwen3TTS"
Icon = ""
